--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "bot-ws",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.7" 
+    "@whiskeysockets/baileys": "^6.7.7"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
